// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`formatDocketSwitchRuling with denied disposition properly formats 1`] = `
"I am proceeding with a denial.  
  
Lorem ipsum dolor sit amet, consectetur adipiscing elit..."
`;

exports[`formatDocketSwitchRuling with granted disposition properly formats 1`] = `
"I am proceeding with a full switch.  
  
Lorem ipsum dolor sit amet, consectetur adipiscing elit..."
`;

exports[`formatDocketSwitchRuling with partially_granted disposition properly formats 1`] = `
"I am proceeding with a partial switch.  
  
Lorem ipsum dolor sit amet, consectetur adipiscing elit..."
`;
